--- a/groups/gt.tex
+++ b/groups/gt.tex
@@ -20,6 +20,7 @@
 \include {gtFrobenius}
 \include {gtComponent}
 \include {gtCNclass}
+\include {gtOddOrder}
 \include {gtAmalgam}
 \include {gtApplications}
 \include {gtClassify}
