Strongly embedded subgroups

--- a/groups/gt.tex
+++ b/groups/gt.tex
@@ -18,6 +18,7 @@
 \include {gtSignal}
 \include {gtRepresentations}
 \include {gtFrobenius}
+\include {gtSE}
 \include {gtComponent}
 \include {gtCNclass}
 \include {gtOddOrder}
