--- a/groups/gtSE.tex
+++ b/groups/gtSE.tex
@@ -1,2 +1,30 @@
-\chapter{Note on Strongly Embedded subgous}
-\section {} 
+\chapter{Note on Strongly Embedded subgoups}
+\section {Main result} 
+{\bf Definition:} $H<G$ is strongly embedded if (a) $H$  is a roper subgroup of $G$ of even order and
+(2) $\forall x \in G \setminus H$, $|H \cap H^x|$ is odd.
+\\
+\\
+{\bf Bender's Theorem:} If $G$ has a strongly embedded subgroup then either:
+\\
+(1) every $S_2$ subgroup has a unique involution, $C_G(t)$ is a proper subgroup and any
+proper subgroup containing $C_G(t)$ is strongly embedded; or,
+\\
+(2) There is a normal series $\{1\} \lhd M \lhd L \lhd G$ such that $G/L$ and $M$ have odd order and
+$L/M$ is $PSL_2(2^n)$, $Sz(2^n)$ or $PSU_3(2^n)$ and every strongly embedded subgroup is of the form
+$H = N_G(S)O_{2'}(G)$, $S \in S_2(G)$.
+\\
+\\
+{\bf A characterization:}  If $G$ is a group of even order and $H$ is a proper subgroup of $G$, either:
+\\
+(1) $H$ is strongly embedded,
+\\
+(2) $|H|$ is even and $N_G(Q) \subseteq H$ for any $Q \in 2(H)$; or,
+\\
+(3) $H \subseteq T \in S_2(G)$ and $N_G(T) \subseteq H$ and $C_G(t) \subseteq H, t \in Inv(H)$.
+\\
+\\
+If $H$ is strongly embedded in $G$, all involutions of $G$, are conjugate and all involutions in $H$
+are $H-$conjugate.  If $u \in Inv(H)$ and $x,y \in Inv(G)$ and $xy \in C_G(u)$, $x,y \in H$.  If
+$x \in G \setminus H$,  $C_G(u)x$ contains exactly one element of $Inv(G)$.
+
+
