--- a/groups/gtOddOrder.tex
+++ b/groups/gtOddOrder.tex
@@ -1,6 +1,6 @@
 \chapter{Notes on odd order techniques}
 \section {An idea} 
-In CN groups of odd order, the maximal abelian subgroups are TI (Reason: from character theory every such
+In CA groups of odd order, the maximal abelian subgroups are TI (Reason: from character theory every such
 subgroup, $A$, is of the form $C_G(x), 1 \ne x \in A$).   For each such $A$, $M=N_G(A)$ is maximal
 and $M$ is Frobenius.  This gives characters of $G$ which lead to a contradiction.
 \\
@@ -22,6 +22,119 @@ with the Uniqueness result provides contradictory evidence for the existance of 
 Finally, an argument using generators and relations leads to a contradiction.  
 \\
 \\
-$PSL_3(7)$ has ann elementary abelian $p^2$ groups as an example.  $PSL_2(11)$ has a single conjugacy
+$PSL_3(7)$ has an elementary abelian $p^2$ groups as an example.  $PSL_2(11)$ has a single conjugacy
 class of involutions and the centralizer of an involution is dihedral of order $12$; it has an elementary
 abelian group of order $4$ but the transitivity theorem doesn't hold.
+$|PSL_2(11)| = 1320= 2^3 \cdot 3 \cdot 5 \cdot 11$.
+\\
+\\
+{\bf Lemma:} If $q= p^n$, $x=
+\left(
+\begin{array}{cc}
+a &  b \\
+c &  d \\
+\end{array}
+\right) \in
+PSL_2(q)$ and $|x| = 4$, $a=-d$ and $a^2 + bc = -1 \jmod{p}$.
+\begin{quote}
+If $x$ has order $4$,
+$x^2 =
+\left(
+\begin{array}{cc}
+a &  b \\
+c &  d \\
+\end{array}
+\right) ^ 2
+=
+\left(
+\begin{array}{cc}
+a^2 +bc &  b(a+d) \\
+c(a+d) &  d^2 + bc \\
+\end{array}
+\right)
+=
+\left(
+\begin{array}{cc}
+-1 &  0 \\
+0 &  -1 \\
+\end{array}
+\right)$.
+So either $a=d=0$ and $bc = -1$ or $d= -a \ne 0$ and $a^2+bc = -1 \jmod{p}$.
+\end{quote}
+{\bf Lemma:} Let $G=SL_2(11)$.  $S \in S_2(G)$ is quaternion.
+$G$ has one element of order $2$, and $110$ elements of order $4$.
+If $x$ has order $4$, $C_G(x)$ is dihedral of order $12$.
+$PSL_2(11)$ has elementary abelian Sylow $2$ subgroups.  There are $55$ involutions in $PSL_2(11)$;
+all involutions are conjugate in $PSL_2(11)$.
+$A_1 =
+\left(
+\begin{array}{cc}
+0 &  4 \\
+8 &  0 \\
+\end{array}
+\right)$
+has order $4$ and so does
+$A_2 =
+\left(
+\begin{array}{cc}
+1 &  3 \\
+3 &  -1 \\
+\end{array}
+\right)$.
+$B =
+\left(
+\begin{array}{cc}
+5 &  1 \\
+2 &  5 \\
+\end{array}
+\right)$ has order $3$. $[A_1, B]=1$ and $C_G(A_1)= \langle A_1, B \rangle$. $|C_G(A_1)| = 12$.
+$C =
+\left(
+\begin{array}{cc}
+2 &  0 \\
+0 &  6 \\
+\end{array}
+\right)$ has order $10$.
+\begin{quote}
+There are $110$ solutions to $a^2 + bc = -1 \jmod{11}$.
+Let $H=G'=PSL_2(11)$.  $S \in S_2(H)$ is elementary abelian and since $H$ is simple,
+$N_H(S) > C_H(S)$ and all the involutions of $S$ are conjugate. Most of the remaining
+results are direct calculations.  Note that $PSL_2(11) \subseteq PSL_2(11^2)$. Let
+$\phi: SL_2(11^2) \rightarrow PSL_2(11^2)$ be the usual homomorphism.  If $\phi(A)$ is an
+involution in $PSL_2(11^2)$, $\phi(A)^2 = \mu I$.  $\exists B: A = B^{-1}
+\left(
+\begin{array}{cc}
+\lambda_1 &  0 \\
+0 &  \lambda_2 \\
+\end{array}
+\right)
+B$, $ {\lambda_1}^2 = {\lambda_2}^2 = \mu$ so $\mu = \pm 1$.  If $\mu =1$, $\phi(A)$ is not an involution,
+so $\mu = -1$.  $A$ has order $4$ in $SL_2(11^2)$ so $A = C^{-1}
+\pm \left(
+\begin{array}{cc}
+i &  0 \\
+0 &  -i \\
+\end{array}
+\right)
+C$ for some $C$.  These two possibilities are conjugate in $SL_2(11^2)$.
+\end{quote}
+\section {Guide to Feit-Thompson} 
+If $G$ is a minimal counterexample to the Odd Order conjecture, we'd like to prove something like
+the following (which is nor quite true).
+\\
+\\
+{\bf Goal:} For every maximal subgroup, $M$ of $G$, $\exists M_0 \lhd M$ such that:
+\\ (1) $C_{M_0}(a) =1$ for $a \in M \setminus M_0$;
+\\ (2) $M \cap M^g =1$ for $g \in G \setminus M$;
+\\ (3) $M_0$ is nilpotent;
+\\ (4) $M/M0$ is cyclic;
+\\ (5) $\forall 1 \ne x \in G$, $x$ lies in exactly one sucb $M_0$.
+\\
+\\
+If all that happened, the $M_0$ would form a partition of $G$.
+In the real argument, such $M$ are either almost Frobenius or $3$-step groups (see section on CN-groups).
+In the real case, if $E$ is a complement of $M_0$ in $M$, $r(E) \leq 2$ and two elements of a nilpotent Hall
+subgroup $H$ are $G-$conjugate iff they are $N_G(H)$-conjugate ($N_G(H)$ controls fusion).
+
+
+
