--- a/science/crypto.tex
+++ b/science/crypto.tex
@@ -1884,6 +1884,7 @@ is $8$MB.
 The winners were Dilithium (for signing) and Kyber (for key encapsulation).  For both,
 put $R_q = {{\mathbb Z}_q}^{k} / (x^{256} + 1)$.
 $||w||+{\infty} = max_i \{\pi_w(w) \}$ and $S_{\eta} = \{ w \in S : ||w||_{\infty} \leq \eta$.
+$1753$ is a primitive root of unity.
 \\
 \\
 For Dilithium, $q = 2^{23} - 2^{13} + 1$. Parameters are $(k, l, \eta, \gamma_1, \gamma_2, \beta)$ with $\beta \leq 60 \eta)$.
