kyber small fix

--- a/science/crypto.tex
+++ b/science/crypto.tex
@@ -1654,11 +1654,11 @@ $a_m \cdot s = b_m$.
 Choose "small" errors, $e_1, e_2, \ldots, e_m$ from $\chi$.
 $a_1 \cdot s + e_1 = b_1$,
 $a_2 \cdot s + e_2 = b_2$,
-\ldots
+\ldots ,
 $a_m \cdot s + e_m = b_m$.
 We often use the discrete Gaussian for $\chi$: $p(x) = {\frac 1 c} e^{\frac {-x^2}{2 \sigma^2}}, x \in {\mathbb Z}$,
 where $c = \sum_{k \in {\mathbb Z}} e^{\frac {-k^2}{2 \sigma^2}} \approx \sigma \sqrt{2 \pi}$.  Parameter width is
-$s = {\frac {s} {\sqrt{2 \pi}}}$.
+$\sigma = {\frac {s} {\sqrt{2 \pi}}}$.
 \\
 \\
 {\bf Definition: } Let $n, m, q \in {\mathbb N}, m \geq n, q \geq 2$ with 
