--- a/science/math2.tex
+++ b/science/math2.tex
@@ -14,7 +14,8 @@ $(\rho, x_1 )^3= \sum x_i^3  - {\frac 3 2} \sum x_i^2 x_j + 6 x_1 x_2 x_3$.
 $(\rho, x_1 )^3= - {\frac {27} {2}}q + {\frac 3 2} {\sqrt {-3}} {\sqrt {D}}$ and
 $(\rho^2, x_1 )^3= - {\frac {27} {2}}q - {\frac 3 2} {\sqrt {-3}} {\sqrt {D}}$.
 Solution is:
-$x= ({-{\frac {p} {2}} +- {\sqrt {{\frac{q^2} {4}} + {\frac {p^3} {27}}}}})^{\frac {1} {3}}$.  
+$x= ({-{\frac {q} {2}} + {\sqrt {{\frac{q^2} {4}} + {\frac {p^3} {27}}}}})^{\frac {1} {3}} +
+({-{\frac {q} {2}} - {\sqrt {{\frac{q^2} {4}} + {\frac {p^3} {27}}}}})^{\frac {1} {3}}$.  
 For \emph{quartic}, $az^4 + bz^3 + cz^2 + dz+e= f(z)$, 
 substitute $x= x - {\frac {b} {4a}}$ and
 divide by $a$ to get $x^4+ px^2 + qx + r$.  Again following Galois,
