small fix in nilpotent

--- a/groups/gtNilpotent.tex
+++ b/groups/gtNilpotent.tex
@@ -37,7 +37,7 @@ We prove that $G^{[n-i]} \supseteq G^{(i)}$, $G^{(0)}=G=G^{[n]}$ and $G^{(n)}=1=
 \\
 \emph{Proof $3 \rightarrow 4$:}
 $\exists i$ such that $G^{[i]} \subseteq H$ and $G^{[i+1]} \nsubseteq H$.  Then
-$G^{[i+1]}, G] \subseteq G^{[i]} \subseteq H$ and there is a $x \in G^{[i+1]}$,
+$[G^{[i+1]}, G] \subseteq G^{[i]} \subseteq H$ and there is a $x \in G^{[i+1]}$,
 $x \notin H$ with $xHx^{-1}=H$.
 \\
 \\
