--- a/groups/gtNilpotent.tex
+++ b/groups/gtNilpotent.tex
@@ -58,7 +58,7 @@ $G \supseteq G^*$.  $G^*$ has a central series by induction.
 {\bf Corrollary:}  If $G$ is nilpotent, $G= \bigoplus_{p \mid |G|} O_p(G)$ and 
 $O_p(G)$ is a Sylow subgroup of $G$.
 \section{Frattini Subgroup}
-{\bf Lemma:} Let $1 \ne H \lhd G$ and $J$, a $p$-group in $H$.  If $|H| \neq 1 \jmod{p}$ then
+{\bf Lemma:} Let $1 \ne H \lhd G$ and $J$, a $p$-group in $G$.  If $|H| \neq 1 \jmod{p}$ then
 $H \cap C_G(J) \neq 1$.
 \begin{quote}
 \end{quote}
