small transfer fix

--- a/groups/gtNilpotent.tex
+++ b/groups/gtNilpotent.tex
@@ -73,7 +73,7 @@ It is called the \emph {Frattini subgroup} of $G$.
 \\
 \\
 {\bf Theorem 3:} 
-(1) If $\langle \Phi(G), X \rangle = G$, $\langle X \rangle = G$
+(1) If $\langle \Phi(G), X \rangle = G$, $\langle X \rangle = G$.
 $\Phi(G) \; char \; G$; further,
 (2) $\Phi(G)$ is nilpotent. (3)
 $F(G)/\Phi(G)= F(G/\Phi(G))$.
@@ -111,8 +111,7 @@ By Frattini, $P \in S_p(G) \rightarrow N_G(P)N= N_G(P) \Phi(G)= N_G(P)$.
 \emph{Proof:} $\Phi(G)$ is nilpotent and so is $F(G)$ and so is their product.  Since
 $F(G)$ is maximal, this product is in $F(G)$.
 \end{quote}
-{\bf Theorem 7:} If $P$ is a $p$-group then ${\overline P}= P/\Phi(P)$ is elementary abelian.  It
-is the smallest such subgroup with this property.
+{\bf Theorem 7:} If $P$ is a $p$-group then ${\overline P}= P/\Phi(P)$ is elementary abelian.
 \begin{quote}
 \emph{Proof:}  Suppose $M$ is maximal in $P$.  As above, $M \lhd P$ and $P' \subseteq M$.
 Suppose ${\overline x} \in {\overline P}$.  $|x|= p^m$ and there is a the characteristic
