--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -48,7 +48,7 @@ $Hr_2, H r_2, \ldots, H r_2 g^{n_2 -1}$, \ldots,
 $Hr_k, H r_k, \ldots, H r_k g^{n_k -1}$, where $r_j g^{n_j} = h_j r_j$ for
 some, $h_j= r_j g^{n_j}{r_j}^{-1}$. So
 $V_{G \rightarrow H}(g)= \prod_{i=1}^k  h_j \jmod {H'}
-= \prod_{i=1}^k  r_i g^{n_i}{r_i}^{-1} \jmod {H'}$.  Further, $\sum_{i=1}^h n_i = |G:H|$.
+= \prod_{i=1}^k  r_i g^{n_i}{r_i}^{-1} \jmod {H'}$.  Further, $\sum_{i=1}^k n_i = |G:H|$.
 \end{quote}
 {\bf Theorem 3:} 
 If $Z$ is a central subgroup of $G$, $|G:Z|=n$ then
