--- a/groups/gtAmalgam.tex
+++ b/groups/gtAmalgam.tex
@@ -184,7 +184,7 @@ $M_2$ has a non-abelian Sylow $2$-subgroup.
 For $p= 2$, if the Sylow $2$-groups are abelian, then $O_2(M_1)= O_2(M_2)$ and $(M_1, M_2)$ is not primitive.
 \end{quote}
 {\bf Theorem 19:}
-Let $M$ be $p$-seperable and $A$ a $p$-subgroup of $M$ satisfying
+Let $M$ be $p$-saperable and $A$ a $p$-subgroup of $M$ satisfying
 $Phi(A) \leq O_p(M)$ and $A \nleq O_p(M)$ then $\exists x \in O_{p,p'}(M)$
 such that for $L= \langle A, A^x \rangle$, (a) $x \in O^p(L) \leq O_{p,p'}(M)$,
 (b) $[O^P(L),A]= O^p(L)$, and (c) $|A/(A \cap O_p(L))|=p$ and $[A \cap O_p(L), L] \leq O_p(M)$.
