daylight and stereo

--- a/science/math4.tex
+++ b/science/math4.tex
@@ -122,6 +122,15 @@ $sin(Y) + sin(X) = 2 sin({\frac {X+Y} {2}}) cos({\frac {X-Y} {2}})$.
 $sin(X) - sin(Y) = 2 cos({\frac {X+Y} {2}}) sin({\frac {X-Y} {2}})$.
 \\
 \\
+{\bf Daylight:} $cos(\alpha) = - tan(\lambda) tan(\delta)$.  $\lambda$ is latitude. $\delta$ is declination of the sun.
+${\frac {2 \alpha} {360}}$ is proportion of $24$ hours.  Example: At peak summer in Seattle, ${\frac {2 \alpha} {360}} = 15.77$ hours.
+\\
+\\
+{\bf Stereograophic projection:} $(x, y, z)$ on sphere $(X,Y)$ on plane.  Projected sphere has bottom on $(0,0,0)$.  $t = {\frac {2r}{2r-z}}$.
+$tx= X$, $ty=Y$, $x^2 + y^2 + (z-r)^2 = r^2$.  $\beta = {\frac {X^2 + Y^2} {4 r^2}}={\frac {z} {2r-z}}$.
+$z= {\frac {2r \beta} {\beta + 1}} = {\frac {X^2 + Y^2} {X^2 + Y^2 + 4 r^2}}$.
+\\
+\\
 {\bf Definition:}
 The \emph{circumcenter} is the common intersection of the 3 perpendicular bisectors of
 each side of a triangle.
