a couple of subnormal results

--- a/groups/gtComponent.tex
+++ b/groups/gtComponent.tex
@@ -71,6 +71,17 @@ satisfies the hypothesis of the previous theorem.  Let $M$ be the unique maximal
 that contains $ \langle A, A^g \rangle , \forall g \in G$.  $A \lhd \lhd , \langle \Sigma_M \rangle \lhd G$ and
 thus $A \lhd \lhd G$.
 \end{quote}
+{\bf Theorem 8:} Let $A \leq G$ and $\langle A, A^g \rangle$ is a $p$-group $\forall g \in G$ then $A \lhd \lhd G$ and $A \leq F(G)$.
+\begin{quote}
+\emph{Proof:}
+Every subgroup of a nilpotent group is subnormal.
+\end{quote}
+{\bf Theorem 9 (Baer):} Let $x$ be a $p$-element of $G$.  Suppose $\langle x, x^g \rangle$ is a $p$-group $\forall g \in G$.
+Then $x \in O_p(G)$.
+\begin{quote}
+\emph{Proof:}
+$p$-groups are nilpotent.
+\end{quote}
 \section {Basic Results and definitions}
 {\bf Generalized Fitting Subgroup Motivation:}
 Since $C(F^*(G)) \subseteq F^*(G)$, $G \rightarrow Aut(G)$ has kernel $Z(F^* (G))$; further, $F^*(G)$ is uncomplicated and its embedding in $G$ is well behaved.  Want to study relationship
